# simple-console-graphics

./: CMakeLists.txt  azure-pipelines.yml  readme.txt
src/: sgraph.cpp
